@@ -1,0 +1,14 @@
+<html>
+<head>
+<title>example</title>
+</head>
+<body>
+
+<%= import Example::Header %>
+<%= import :example_page %>
+
+<address>
+<a href="mailto:toki@freedom.ne.jp">TOKI Yoshinori</a>
+</address>
+</body>
+</html>
