@@ -1,0 +1,10 @@
+<p>
+  <% cond :example? do %><em>example</em><% end %>
+  <% not_cond :example? do %><%= link_path :example, :text => 'example' %><% end %>
+
+  <% cond :code? do %><em>code</em><% end %>
+  <% not_cond :code? do %><%= link_path :code, :text => 'code' %><% end %>
+
+  <% cond :view? do %><em>view</em><% end %>
+  <% not_cond :view? do %><%= link_path :view, :text => 'view' %><% end %>
+</p>
