@@ -1,0 +1,16 @@
+<html>
+<head>
+<title>example</title>
+</head>
+<body>
+
+<%= import Example::Header %>
+<hr />
+<pre><%= value :view_page %></pre>
+<hr />
+
+<address>
+<a href="mailto:toki@freedom.ne.jp">TOKI Yoshinori</a>
+</address>
+</body>
+</html>
