@@ -1,5 +1,7 @@
 2007-06-13  TOKI Yoshinori  <toki@freedom.ne.jp>
 
+	* lib/gluon/builder.rb: request parameter of 'gluon.curr_page'
+
 	* lib/gluon/renderer.rb: (Gluon::ViewRenderer class) `render'
 	class method is moved from Gluon::ERBContext class.
 
